--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,5 +1,5 @@
 h1{
-    display: block;
+    display: inline-block;
     font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
     color: #F25A70;
     text-shadow: 4px 4px 0px #000;
