--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,4 +1,4 @@
-h1{
+.title{
     font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
     color: #F25A70;
     text-shadow: 4px 4px 0px #000;
