Create the -second variation to component title

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     border-bottom: 10px solid #000; 
+    box-sizing: border-box;
 }
 
 .banner .wrapper{
