--- a/css/components/title.css
+++ b/css/components/title.css
@@ -5,3 +5,10 @@
     font-size: 35px;
     text-align: inherit;
 }
+
+.title.-second{
+    color: #fff;
+    text-shadow: none;
+    background-color: blue;
+    text-align: center;
+}
