--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,4 +1,4 @@
-.title{
+.main-title{
     font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
     color: #F25A70;
     text-shadow: 4px 4px 0px #000;
@@ -6,7 +6,7 @@
     text-align: inherit;
 }
 
-.title.-second{
+.main-title.-second{
     color: #fff;
     text-shadow: none;
     text-align: center;
