--- a/css/components/section.css
+++ b/css/components/section.css
@@ -4,3 +4,13 @@
       padding-bottom: 100px;
       border-bottom: 10px solid #7C5E99;
 }
+
+section .main-title{
+      margin-bottom: 60px;
+}
+
+.section.-second{
+      background-color: #000;
+      align-content: center;
+      border-bottom: 10px solid #F25A70;         
+}
