--- a/css/components/main-action.css
+++ b/css/components/main-action.css
@@ -1,4 +1,4 @@
-.action {
+.main-action {
     display: inline-flex;
     align-items: center;
     color: #FFF;
@@ -8,7 +8,7 @@
     text-decoration: none; /*tirar tracinho debaixo da fonte que já vem como padrão*/
     margin-right: 30px; /*respiro externo -> estou empurrando o elemento do meu lado*/  
 }
-.action::before{
+.main-action::before{
     content: "";
     background-color: #F25A70;
     width: 10px;
