--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,15 +1,15 @@
-.section{
+.main-section{
       background-color: #F25A70;
       padding-top: 50px;
       padding-bottom: 100px;
       border-bottom: 10px solid #7C5E99;
 }
 
-section .main-title{
+.main-section .main-title{
       margin-bottom: 60px;
 }
 
-.section.-second{
+.main-section.-second{
       background-color: #000;
       align-content: center;
       border-bottom: 10px solid #F25A70;         
