--- a/css/components/main-form.css
+++ b/css/components/main-form.css
@@ -1,3 +1,12 @@
 .main-form{
     background-color: grey;
+    padding: 50px 40px 45px 40px;
+}
+
+.main-form .main-input{
+    margin-bottom: 20px;
+}
+
+.main-form .main-input.-txtarea{
+    margin-bottom: 40px;
 }
