Add pseudo class to the main-button variation component

--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -8,6 +8,7 @@
     font-size: 20px;
     color: #fff;
     text-decoration: none;
+    cursor: pointer;
 }
 .main-button:hover{
     transform: scale(1.09);
@@ -15,4 +16,8 @@
 
 .main-button.-buttonsend{
     width: 100%;
+}
+
+.main-button.-buttonsend:hover{
+    transform: scale(1.01);
 }
