--- a/css/components/main-form.css
+++ b/css/components/main-form.css
@@ -3,6 +3,10 @@
     padding: 50px 40px 45px 40px;
 }
 
+.main-form .main-title.-second{
+    margin-bottom: 50px;
+}
+
 .main-form .main-input{
     margin-bottom: 20px;
 }
