--- a/css/components/main-input.css
+++ b/css/components/main-input.css
@@ -1,4 +1,5 @@
 .main-input{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     box-sizing: border-box;
     border: 3px solid #000;
     font-size: 30px;
